fix nearby including incorrect results